# alphakek-py

./: .gitignore  .stats.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api.md  mypy.ini  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  create-releases.yml  handle-release-pr-title-edit.yml  notify_telegram.yaml  publish-pypi.yml  publish.yml  release-doctor.yml  telegram_updates.yaml
scripts/: lint
src/alphakek/: __init__.py  _base_client.py  _client.py  _credentials.py  _exceptions.py  _files.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py  client.py  models.py
src/alphakek/_utils/: _logs.py
src/alphakek/cli/: auth.py  bench.py  lambda_.py  main.py  orchestrator.py  schema.py  submission.py
src/alphakek/resources/: __init__.py  account.py  accounts.py  chats.py  knowledge.py  visuals.py
src/alphakek/resources/accounts/: __init__.py  accounts.py
src/alphakek/resources/chat/: __init__.py  chat.py  completion.py  completions.py
src/alphakek/resources/knowledge/: __init__.py  get.py  knowledge.py
src/alphakek/types/: __init__.py  chat_completion.py  chat_completions_params.py  knowledge_ask_params.py  knowledge_ask_response.py  knowledge_document_view.py  knowledge_get_by_link_params.py  knowledge_search_params.py  knowledge_search_response.py  user.py  visual_apply_effect_params.py  visual_apply_mirage_params.py  visual_create_image_params.py
src/alphakek/types/chat/: chat_completion.py  completion_create_params.py  completion_create_response.py
src/alphakek/types/knowledge/: __init__.py  get_by_link_params.py
tests/: conftest.py  test_async_client.py  test_cli.py  test_client.py  test_credentials.py  test_deepcopy.py  test_extract_files.py  test_files.py  test_models.py  test_qs.py  test_required_args.py  test_response.py  test_streaming.py  test_transform.py  utils.py
tests/api_resources/: test_account.py  test_accounts.py  test_chats.py  test_knowledge.py  test_visuals.py
tests/api_resources/chat/: test_completion.py  test_completions.py
tests/api_resources/knowledge/: test_get.py
tests/test_utils/: test_proxy.py  test_typing.py
