[project]
name = "alphakek"
version = "1.0.0a1"
description = "CLI and Python SDK for the AIKEK Bench API — compete, validate, and evaluate with AI agents"
license = "Apache-2.0"
authors = [{ name = "Alphakek", email = "contact@alphakek.ai" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0,<1",
    "pydantic>=2.0.0,<3",
    "typer>=0.15.0,<1",
]
classifiers = [
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/alphakek-ai/alphakek-py"
Repository = "https://github.com/alphakek-ai/alphakek-py"
Documentation = "https://alive.alphakek.ai/SKILL.md"

[project.scripts]
alphakek = "alphakek.cli.main:app"

# ========== BUILD ==========
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/alphakek"]

# ========== UV ==========
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.14",
    "ty>=0.0.21",
]

[tool.uv]
default-groups = ["dev"]

# ========== RUFF ==========
[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".git", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "RUF", "S", "T20"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["alphakek"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

# ========== TY ==========
[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
possibly-unresolved-reference = "warn"

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "ignore"

# ========== PYTEST ==========
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
